# fastapi-sandbox

./: .gitignore  .pre-commit-config.yaml  AUTHORS  README.md  pyproject.toml
src/: main.py
